--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,26 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
+
+# vs code individual workspace settings
+.env
+*.code-workspace
+*.vscode
+
+# editor 
+*.nvim.lua
+.eslintcache
+
+# keys
+*.pem
+*.ignore
+
+# IDE intelliJ
+/RIT-SE-CODE-BANK.iml
+.idea/
+.DS_Store
+
+# node and npm
+*.node_modules
+node_modules/
+.vite
