--- a/apps/scoop-portal/package.json
+++ b/apps/scoop-portal/package.json
@@ -2,6 +2,7 @@
   "name": "scoop-portal",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -28,5 +29,9 @@
     "prettier": "3.6.0",
     "prisma": "^6.10.1",
     "tailwindcss": "^4"
+  },
+  "prisma": {
+    "seed": "node server/server/prisma/seed.js",
+    "schema": "server/server/prisma"
   }
 }
