--- a/apps/scoop-portal/package.json
+++ b/apps/scoop-portal/package.json
@@ -14,7 +14,7 @@
     "@mui/icons-material": "^7.1.2",
     "@mui/material": "^7.1.2",
     "express": "^5.1.0",
-    "next": "15.3.4",
+    "next": "^15.3.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
